ZumZumFinancials_Dev1/src/objects/Purchase_Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Supplier Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Purchase Invoices</relationshipLabel>
        <relationshipName>Purchase_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dimension__c</fullName>
        <label>Dimension</label>
        <referenceTo>Dimension__c</referenceTo>
        <relationshipLabel>Purchase Invoices</relationshipLabel>
        <relationshipName>Purchase_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Due_Date__c</fullName>
        <label>Invoice Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Template__c</fullName>
        <label>Invoice Template</label>
        <referenceTo>Invoice_Template__c</referenceTo>
        <relationshipLabel>Purchase Invoices</relationshipLabel>
        <relationshipName>Purchase_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>POP_Number__c</fullName>
        <label>POP Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paid_Amount__c</fullName>
        <label>Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Paid__c</fullName>
        <defaultValue>&apos;N&apos;</defaultValue>
        <label>Paid</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <label>Payment Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Order__c</fullName>
        <label>Purchase Order</label>
        <referenceTo>Purchase_Order__c</referenceTo>
        <relationshipLabel>Purchase Invoices</relationshipLabel>
        <relationshipName>Purchase_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Settlement_Discount__c</fullName>
        <label>Settlement Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Settlement_due_days__c</fullName>
        <label>Settlement due days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Posted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAT Processed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Gross__c</fullName>
        <label>Total Gross</label>
        <summarizedField>Purchase_Invoice_Line_Item__c.Total_Gross__c</summarizedField>
        <summaryForeignKey>Purchase_Invoice_Line_Item__c.Purchase_Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Net__c</fullName>
        <label>Total Net</label>
        <summarizedField>Purchase_Invoice_Line_Item__c.Total_Net__c</summarizedField>
        <summaryForeignKey>Purchase_Invoice_Line_Item__c.Purchase_Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Tax__c</fullName>
        <label>Total VAT</label>
        <summarizedField>Purchase_Invoice_Line_Item__c.Total_VAT__c</summarizedField>
        <summaryForeignKey>Purchase_Invoice_Line_Item__c.Purchase_Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Purchase Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase Credit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Purchase Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Payment_Status__c</columns>
        <columns>Type__c</columns>
        <columns>Total_Gross__c</columns>
        <columns>Total_Net__c</columns>
        <columns>Total_Tax__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PI Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purchase Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>